# mosaic

./: .clangd  .gitignore  CMakeLists.txt  Makefile  a.out  main.cpp  mosaic  shell.nix
.cache/clangd/index/: main.cpp.AF83260FE1D01363.idx
include/: assignment.hpp  compare.hpp  images.hpp
src/: assignment.cpp  compare.cpp  images.cpp  main.cpp
